kubernetes/argocd/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.wrenspace.dev`)
      priority: 10
      services:
        - name: argocd-server
          port: http
    - kind: Rule
      match: Host(`argocd.wrenspace.dev`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: http
          scheme: h2c
  tls:
    secretName: argocd-tls
